--- a/src/style.css
+++ b/src/style.css
@@ -4,3 +4,17 @@ html {
     font-family: "Roboto", "sans-serif";
 }
 
+header {
+    height: 4rem;
+    padding-left: 0.5rem;
+    background-color: rgb(238, 238, 238)
+}
+
+.titlebar {
+    display: flex;
+    align-items: center;
+    background-color: rgb(238, 238, 238);
+    padding: 3px;
+    gap: 0.2rem;
+    height: 50%;
+}
